kube/tools.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: tools
  name: tools
spec:
  containers:
  - image: quay.io/ukhomeofficedigital/cop-platform-tools:latest
    name: tools
    command: ["sleep", "infinity"]
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
  securityContext:
    runAsUser: 1000
    runAsGroup: 1000
